--- a/app/src/main/res/layout-land/fragment_chore.xml
+++ b/app/src/main/res/layout-land/fragment_chore.xml
@@ -29,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="4dp"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp">
         <Button
@@ -37,7 +38,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:background="#4caf50"
+            android:textColor="#ffffff"/>
         <CheckBox
             android:id="@+id/chore_done"
             android:layout_width="wrap_content"
