--- a/app/src/main/res/layout/activity_chore_pager.xml
+++ b/app/src/main/res/layout/activity_chore_pager.xml
@@ -4,4 +4,5 @@
     android:id="@+id/activity_chore_pager_view_pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#304caf50"
     />
