--- a/app/src/main/res/menu/fragment_chore_list.xml
+++ b/app/src/main/res/menu/fragment_chore_list.xml
@@ -8,5 +8,11 @@
         android:title="@string/new_chore"
         app:showAsAction="ifRoom|withText"/>
 
+    <item
+        android:id="@+id/menu_item_show_subtitle"
+        android:title="@string/show_subtitle"
+        app:showAsAction="ifRoom"/>
+
+
 
 </menu>
